--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "domain": "humidite_detecteur",
     "name": "Détecteur d'humidité",
     "version": "1.0.0",
-    "documentation": "https://github.com/tonrepo/humidite_detecteur",
+    "documentation": "https://github.com/Petch91/Hydrostat.git",
     "requirements": [],
     "codeowners": [
         "@Petch91"
